# aladdin

./: .gitignore  Cargo.toml  README.md  config.toml  rctl
src/: arbitrer.rs  combo.rs  constants.rs  events.rs  main.rs  markets.rs  opportunity.rs  server.rs
src/arbitrer/: bookie.rs  bucket.rs  matcher.rs  mod.rs  opportunity.rs  table.rs
src/base/: barrier.rs  config.rs  currency.rs  error.rs  logger.rs  mod.rs  parsing.rs  session.rs  timers.rs  websocket.rs
src/gamblers/: betclub.rs  betclub2.rs  betway.rs  cybbet.rs  egamingbets.rs  mod.rs  vitalbet.rs  xsporta.rs
