[package]
name = "aladdin"
version = "0.1.0"
authors = [
    "Paul Loyd <pavelko95@gmail.com>",
    "Ivan Skorokhodov <iskorokhodov@gmail.com>"
]

[dependencies]
chrono = "^0.2.25"
hyper = "^0.9.10"
kuchiki = {version = "^0.3.3", features = ["hyper"]}
regex = "^0.1.73"
lazy_static = "^0.2.1"
url = "^1.2"
mime = "^0.2.2"
rustc-serialize = "^0.3.19"
toml = "^0.2"
